<resources>
    <string name="app_name">RebirthSimulator</string>
    <string name="title_home">抽卡</string>
    <string name="title_dashboard">图鉴</string>
    <string name="title_notifications">转生</string>
    <string name="setting">设置</string>
    <string name="loginout">退出</string>
    <string name="getone">抽一次</string>
    <string name="getten">抽十次</string>
    <string name="watertext">水晶:</string>
    <string name="cheat">欧皇模式</string>
    <string name="restart">重置数据</string>
    <string name="delectaccount">删除账号</string>
    <string name="currency1text">转生碎片：</string>
    <string name="about">关于</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="yourname">用户名：</string>
    <string name="inputyourname">请输入用户名</string>
    <string name="logout">注销</string>
</resources>