<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/cardresult10"
        android:layout_width="155dp"
        android:layout_height="33dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/cardresult9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.739"
        app:layout_constraintStart_toEndOf="@+id/cardresult9"
        app:layout_constraintTop_toTopOf="@+id/cardresult9"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/cardresult9"
        android:layout_width="155dp"
        android:layout_height="33dp"
        android:layout_marginTop="244dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="@+id/cardresult7"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/cardresult7"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/cardresult8"
        android:layout_width="155dp"
        android:layout_height="33dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/cardresult7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.739"
        app:layout_constraintStart_toEndOf="@+id/cardresult7"
        app:layout_constraintTop_toTopOf="@+id/cardresult7"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/cardresult7"
        android:layout_width="155dp"
        android:layout_height="33dp"
        android:layout_marginTop="184dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/cardresult1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/cardresult1"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <TextView
        android:id="@+id/cardresult5"
        android:layout_width="155dp"
        android:layout_height="33dp"
        android:layout_marginTop="124dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/cardresult1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/cardresult1"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <TextView
        android:id="@+id/cardresult4"
        android:layout_width="155dp"
        android:layout_height="33dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/cardresult3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.739"
        app:layout_constraintStart_toEndOf="@+id/cardresult3"
        app:layout_constraintTop_toTopOf="@+id/cardresult3"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/cardresult3"
        android:layout_width="155dp"
        android:layout_height="33dp"
        android:layout_marginTop="68dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/cardresult1"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="@+id/cardresult1"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <TextView
        android:id="@+id/text_home"
        android:layout_width="412dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.29" />

    <Button
        android:id="@+id/getone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.195"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/getten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getten"
        app:layout_constraintBottom_toBottomOf="@+id/getone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.634"
        app:layout_constraintStart_toEndOf="@+id/getone"
        app:layout_constraintTop_toTopOf="@+id/getone"
        app:layout_constraintVertical_bias="0.202" />

    <TextView
        android:id="@+id/watertext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/watertext"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.287"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.836" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="149dp" />

    <Switch
        android:id="@+id/cheat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/cheat"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.006"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="243dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="533dp" />

    <ImageButton
        android:id="@+id/userButton"
        android:layout_width="72dp"
        android:layout_height="69dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_user"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.062"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/currency1text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:text="@string/currency1text"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.207" />

    <TextView
        android:id="@+id/currency2text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="货币2："
        app:layout_constraintStart_toEndOf="@+id/currency1"
        app:layout_constraintTop_toTopOf="@+id/currency1text" />

    <TextView
        android:id="@+id/currency1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        app:layout_constraintStart_toEndOf="@+id/currency1text"
        app:layout_constraintTop_toTopOf="@+id/currency1text" />

    <TextView
        android:id="@+id/currency2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1"
        app:layout_constraintStart_toEndOf="@+id/currency2text"
        app:layout_constraintTop_toTopOf="@+id/currency2text" />

    <TextView
        android:id="@+id/cardresult1"
        android:layout_width="155dp"
        android:layout_height="33dp"
        android:layout_marginTop="4dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.167"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <TextView
        android:id="@+id/cardresult2"
        android:layout_width="155dp"
        android:layout_height="33dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/cardresult1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.739"
        app:layout_constraintStart_toEndOf="@+id/cardresult1"
        app:layout_constraintTop_toTopOf="@+id/cardresult1"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/cardresult6"
        android:layout_width="155dp"
        android:layout_height="33dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/cardresult5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.739"
        app:layout_constraintStart_toEndOf="@+id/cardresult5"
        app:layout_constraintTop_toTopOf="@+id/cardresult5"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/cardresult"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <EditText
        android:id="@+id/water"
        android:layout_width="169dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        android:text="30000"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/watertext"
        app:layout_constraintStart_toEndOf="@+id/watertext"
        app:layout_constraintTop_toTopOf="@+id/watertext"
        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>